--- a/index.html
+++ b/index.html
@@ -4,31 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Saraswati Senior Secondary Vidya Mandir - Class 10F</title>
-    <link rel="stylesheet" href="assets/css/styles.css">
+    <title>SSSVM CLASS 10th F</title>
 </head>
 <body>
-<header>
-    <img src="assets/img/logo.png" alt="School Logo" height="50">
-    <h1>Saraswati Senior Secondary Vidya Mandir</h1>
-    <h2>Class 10th - Section F</h2>
-</header>
-<nav>
-    <a href="#">Home</a>
-    <a href="#">Results</a>
-    <a href="#">Homework</a>
-    <a href="#">Notices</a>
-    <a href="#">Contact Us</a>
-</nav>
-<div class="main-content">
-    <h3>Class Teacher: Mr. Ashok Yadav Ji</h3>
-    <p>Developer: Priyanshu Singh</p>
-    <p>Phone: <a href="tel:+919451478144">+91 94514 78144</a></p>
-    <p>Email: <a href="mailto:priyanshusiing0606@gmail.com">priyanshusiing0606@gmail.com</a></p>
-</div>
-<a href="https://wa.me/919451478144?text=Hi%20I%20want%20to%20connect%20regarding%20Class%2010th%20F" class="whatsapp-button">💬</a>
-<footer>
-    © 2025 SSVM Class 10th F
-</footer>
+    <header>
+        <h1>Saraswati Senior Secondary Vidya Mandir, CLASS 10th F</h1>
+        <h2>Class Teacher: Mr. ASHOK YADAV JI</h2>
+        <h3>Developer: Priyanshu Singh</h3>
+    </header>
+    <nav>
+        <ul>
+            <li>Results</li>
+            <li>Holiday Homework</li>
+            <li>Notices</li>
+            <li>Photos</li>
+            <li>Post</li>
+            <li>Contact Us</li>
+        </ul>
+    </nav>
+    <footer>
+        <p>Contact Developer: <a href="https://wa.me/919198426858">WhatsApp</a> | Email: priyanshusiing0606@gmail.com</p>
+    </footer>
 </body>
 </html>
