--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
   <main>
     <section id="contact">
       <h3>📞 Contact Us</h3>
-      <p><strong>🏫 School Address:</strong> Saraswati Senior Secondary Vidya Mandir, [City/Location]</p>
+      <p><strong>🏫 School Address:</strong> Saraswati Senior Secondary Vidya Mandir, Deoria Khas, Deoria (U.P.)</p>
       <p><strong>👨‍🏫 Class Teacher Phone:</strong> <a href="tel:+919451478144">+91 94514 78144</a></p>
-      <p><strong>💬 Developer WhatsApp:</strong> <a href="https://wa.me/919451478144">Chat on WhatsApp</a></p>
+      <p><strong>💬 Developer WhatsApp:</strong> <a href="https://wa.me/919198426858">Chat on WhatsApp</a></p>
       <p><strong>📧 Developer Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>
     </section>
   </main>
