--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,19 @@
+<!DOCTYPE html><html><head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><link rel='stylesheet' href='styles.css'><title>contact.html</title></head><body>
+<header><h1>📞 Contact Us</h1></header>
 
-        <h2>Contact Us</h2>
-        <p><strong>Class Teacher:</strong> 9451478144</p>
-        <p><strong>Developer:</strong> 9198426858</p>
-        <p><a href='https://wa.me/9198426858'>Chat on WhatsApp</a></p>
-        <p><strong>Email (Developer):</strong> priyanshusiing0606@gmail.com</p>
-        <p><strong>Email (Website Manager):</strong> sssvmclass10thf@gmail.com</p>
-    
+<nav>
+  <a href="index.html" class="nav-btn">Home</a>
+  <a href="homework.html" class="nav-btn">Homework</a>
+  <a href="results.html" class="nav-btn">Results</a>
+  <a href="notices.html" class="nav-btn">Notices</a>
+  <a href="gallery.html" class="nav-btn">Gallery</a>
+  <a href="contact.html" class="nav-btn">Contact</a>
+</nav>
+
+<main>
+  <p><strong>Class Teacher:</strong> Mr. Ashok Yadav</p>
+  <p><strong>Phone:</strong> <a href="tel:+919451478144">+91 94514 78144</a></p>
+  <p><strong>Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>
+</main>
+<footer>© 2025 Contact | SSSVM Class 10-F</footer>
+</body></html>
