--- a/notices.html
+++ b/notices.html
@@ -1,1 +1,19 @@
-<!-- Lists notice files from Firebase -->
+<!DOCTYPE html><html><head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><link rel='stylesheet' href='styles.css'><title>notices.html</title></head><body>
+<header><h1>📢 Notices Section</h1></header>
+
+<nav>
+  <a href="index.html" class="nav-btn">Home</a>
+  <a href="homework.html" class="nav-btn">Homework</a>
+  <a href="results.html" class="nav-btn">Results</a>
+  <a href="notices.html" class="nav-btn">Notices</a>
+  <a href="gallery.html" class="nav-btn">Gallery</a>
+  <a href="contact.html" class="nav-btn">Contact</a>
+</nav>
+
+<main>
+  <ul>
+    <li><a href="assets/notices/HolidayNotice.pdf" target="_blank">Holiday Notice (PDF)</a></li>
+  </ul>
+</main>
+<footer>© 2025 Notices | SSSVM Class 10-F</footer>
+</body></html>
