--- a/homework.html
+++ b/homework.html
@@ -1,25 +1,1 @@
-<!DOCTYPE html><html><head><meta charset='UTF-8'><meta name='viewport' content='width=device-width, initial-scale=1.0'><link rel='stylesheet' href='styles.css'><title>homework.html</title></head><body>
-<header><h1>📘 Homework Section</h1></header>
-
-<nav>
-  <a href="index.html" class="nav-btn">Home</a>
-  <a href="homework.html" class="nav-btn">Homework</a>
-  <a href="results.html" class="nav-btn">Results</a>
-  <a href="notices.html" class="nav-btn">Notices</a>
-  <a href="gallery.html" class="nav-btn">Gallery</a>
-  <a href="contact.html" class="nav-btn">Contact</a>
-</nav>
-
-<main>
-  <h2>Uploaded Homework</h2>
-  <ul>
-    <li><a href="assets/homework/Math_HW_July.pdf" target="_blank">Math Homework - July (PDF)</a></li>
-    <li><a href="assets/homework/Science_Diagram.jpg" target="_blank">Science Diagram (Image)</a></li>
-  </ul>
-  <video width="400" controls>
-    <source src="assets/media/chapter_intro.mp4" type="video/mp4">
-    Your browser does not support video playback.
-  </video>
-</main>
-<footer>© 2025 Homework | SSSVM Class 10-F</footer>
-</body></html>
+<!-- List homework files from Firebase -->
