--- a/dashboard.html
+++ b/dashboard.html
@@ -1,46 +1,1 @@
-
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Admin Dashboard - SSSVM</title>
-  <link rel="stylesheet" href="styles.css" />
-  <style>
-    .dashboard {
-      max-width: 600px;
-      margin: 30px auto;
-      background: #fffde7;
-      padding: 20px;
-      border-radius: 10px;
-    }
-    textarea {
-      width: 100%;
-      height: 120px;
-      margin: 10px 0;
-      padding: 10px;
-    }
-    button {
-      background: #ff9800;
-      color: white;
-      padding: 10px 20px;
-      border: none;
-      border-radius: 6px;
-      cursor: pointer;
-    }
-  </style>
-</head>
-<body>
-<header><h1>📋 Admin Dashboard</h1></header>
-<main>
-  <div class="dashboard">
-    <h2>Add New Update</h2>
-    <textarea placeholder="Write your update here..."></textarea>
-    <br>
-    <button onclick="alert('This is a demo — updates are static only.')">Submit Update</button>
-    <p style="margin-top:15px; color: red;">⚠️ This demo can't actually save data. Use GitHub manually or add real backend.</p>
-  </div>
-</main>
-<footer>© 2025 Admin Dashboard | SSSVM Class 10-F</footer>
-</body>
-</html>
+<!-- Upload/Delete files with Firebase -->
