--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
       <p><strong>💬 Developer WhatsApp:</strong> <a href="https://wa.me/919198426858">Chat on WhatsApp</a></p>
       <p><strong>📧 Developer Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>
     </section>
+    <section id="post">
+      <h3>📄 Class 10-F Student List</h3>
+      <embed src="C:\Users\Priyanshu Singh\Downloads\ssvmclass10thf-main-updated\assets\pdf" type="application/pdf" width="100%" height="600px" />
+      <p><a href="C:\Users\Priyanshu Singh\Downloads\ssvmclass10thf-main-updated\assets\pdf" download>📥 Download PDF</a></p>
+    </section>
   </main>
 
   <footer>
