--- a/Index.html
+++ b/Index.html
@@ -44,8 +44,8 @@
 </section>
         <section id="post">
       <h3>📄 Class 10-F Student List</h3>
-      <embed src="C:\Users\Priyanshu Singh\Downloads\ssvmclass10thf-main-updated\assets\pdf" type="application/pdf" width="100%" height="600px" />
-      <p><a href="C:\Users\Priyanshu Singh\Downloads\ssvmclass10thf-main-updated\assets\pdf" download>📥 Download PDF</a></p>
+      <embed src="https://drive.google.com/file/d/16D4CEFQjQ-0OBh2k6aaNMwE2AQLqU3LC/view?usp=drivesdk" type="application/pdf" width="100%" height="600px" />
+      <p><a href="<https://drive.google.com/file/d/16D4CEFQjQ-0OBh2k6aaNMwE2AQLqU3LC/view?usp=drivesdk>📥 Download PDF</a></p>
     </section>
   </main>
   
