--- a/Index.html
+++ b/Index.html
@@ -43,10 +43,23 @@
       <p><strong>📧 Developer Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>   
 </section>
         <section id="post">
-      <h3>📄 Class 10-F Student List</h3>
-      <embed src="https://drive.google.com/file/d/16D4CEFQjQ-0OBh2k6aaNMwE2AQLqU3LC/view?usp=drivesdk" type="application/pdf" width="100%" height="600px" />
-      <p><a href="<https://drive.google.com/file/d/16D4CEFQjQ-0OBh2k6aaNMwE2AQLqU3LC/view?usp=drivesdk>📥 Download PDF</a></p>
-    </section>
+  <h3>📄 Class 10-F Student List</h3>
+
+  <!-- PDF Embed from Google Drive -->
+  <iframe 
+    src="https://drive.google.com/file/d/16D4CEFQjQ-0OBh2k6aaNMwE2AQLqU3LC/preview" 
+    width="100%" 
+    height="600px" 
+    allow="autoplay">
+  </iframe>
+
+  <!-- View/Download Link -->
+  <p>
+    <a href="https://drive.google.com/file/d/16D4CEFQjQ-0OBh2k6aaNMwE2AQLqU3LC/view?usp=drivesdk" target="_blank">
+      📥 Download/View PDF
+    </a>
+  </p>
+        </section>
   </main>
   
 
