--- a/Index.html
+++ b/Index.html
@@ -45,18 +45,10 @@
         <section id="post">
   <h3>📄 Class 10-F Student List</h3>
 
-  <!-- PDF Embed from Google Drive -->
-  <iframe 
-    src="https://drive.google.com/file/d/16D4CEFQjQ-0OBh2k6aaNMwE2AQLqU3LC/preview" 
-    width="100%" 
-    height="600px" 
-    allow="autoplay">
-  </iframe>
-
-  <!-- View/Download Link -->
+  <!-- ✅ Working PDF link -->
   <p>
     <a href="https://drive.google.com/file/d/16D4CEFQjQ-0OBh2k6aaNMwE2AQLqU3LC/view?usp=drivesdk" target="_blank">
-      📥 Download/View PDF
+      📥 View or Download PDF
     </a>
   </p>
         </section>
