--- a/Index.html
+++ b/Index.html
@@ -45,13 +45,20 @@
         <section id="post">
   <h3>📄 Class 10-F Student List</h3>
 
-  <!-- ✅ Working PDF link -->
+  <!-- Embed PDF from GitHub Pages -->
+  <iframe 
+    src="https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf" 
+    width="100%" 
+    height="600px">
+  </iframe>
+
+  <!-- View/Download PDF -->
   <p>
-    <a href="https://drive.google.com/file/d/16D4CEFQjQ-0OBh2k6aaNMwE2AQLqU3LC/view?usp=drivesdk" target="_blank">
+    <a href="https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf" target="_blank">
       📥 View or Download PDF
     </a>
   </p>
-        </section>
+  </section>
   </main>
   
 
