--- a/Index.html
+++ b/Index.html
@@ -45,20 +45,20 @@
         <section id="post">
   <h3>📄 Class 10-F Student List</h3>
 
-  <!-- Embed PDF from GitHub Pages -->
+  <!-- Embed via Google Docs Viewer -->
   <iframe 
-    src="https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf" 
+    src="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf&embedded=true" 
     width="100%" 
     height="600px">
   </iframe>
 
-  <!-- View/Download PDF -->
+  <!-- Fallback Link -->
   <p>
     <a href="https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf" target="_blank">
       📥 View or Download PDF
     </a>
   </p>
-  </section>
+        </section>
   </main>
   
 
