--- a/Index.html
+++ b/Index.html
@@ -50,7 +50,7 @@
       📥 View or Download PDF
     </a>
   </p>
-          <p> https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf </p>
+          <p> <a href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf"</a> </p>
         </section>
   </main>
   
