--- a/index.html
+++ b/index.html
@@ -41,6 +41,9 @@
       <p><strong>💬 Developer WhatsApp:</strong> <a href="https://wa.me/919198426858">Chat on WhatsApp</a></p>
       <p><strong>📧 Developer Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>
     </section>
+   <section id="Students List">
+      <h4> Class 10th f Students List </h4>
+      <p> LINK:<strong> <a href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf">student list pdf</a></strong></p>
   </main>
 
   <footer>
