--- a/index.html
+++ b/index.html
@@ -1,71 +1,12 @@
-<!DOCTYPE html>
+ <!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>SSSVM Class 10-F</title>
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="styles.css" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
-
-  <style>
-    body {
-      font-family: 'Poppins', sans-serif;
-      margin: 0;
-      padding: 0;
-      background-color: #fffaf0;
-    }
-
-    header, nav, main, footer {
-      padding: 20px;
-    }
-
-    nav ul {
-      list-style: none;
-      display: flex;
-      gap: 15px;
-      padding: 0;
-    }
-
-    nav ul li a {
-      text-decoration: none;
-      color: #333;
-      font-weight: 600;
-    }
-
-    section#StudentsList {
-      margin-top: 30px;
-      padding: 20px;
-      background-color: #fefefe;
-      border-radius: 10px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-    }
-
-    .glow-button {
-      display: inline-block;
-      padding: 12px 24px;
-      font-size: 16px;
-      font-weight: 600;
-      color: white;
-      background-color: #007bff;
-      border: none;
-      border-radius: 8px;
-      text-decoration: none;
-      box-shadow: 0 0 10px #007bff, 0 0 20px #007bff;
-      transition: 0.3s ease-in-out;
-    }
-
-    .glow-button:hover {
-      box-shadow: 0 0 20px #00cfff, 0 0 40px #00cfff;
-      transform: scale(1.05);
-    }
-
-    footer {
-      text-align: center;
-      font-size: 14px;
-      color: #666;
-      padding: 20px;
-    }
-  </style>
 </head>
 <body>
   <header>
@@ -83,36 +24,10 @@
   <nav>
     <ul>
       <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-      <li><a href="#StudentsList"><i class="fas fa-file-alt"></i> Students List</a></li>
+      <li><a href="#"><i class="fas fa-file-alt"></i> Students List</a></li>
       <li><a href="#"><i class="fas fa-book"></i> Homework</a></li>
       <li><a href="#"><i class="fas fa-bullhorn"></i> Notices</a></li>
       <li><a href="#"><i class="fas fa-pencil-alt"></i> Post</a></li>
       <li><a href="#"><i class="fas fa-address-book"></i> Contact Us</a></li>
     </ul>
-  </nav>
-
-  <main>
-    <section id="StudentsList">
-      <h3>📋 Class 10-F Student List</h3>
-      <p>Click the button below to view or download the student list:</p>
-      <a class="glow-button" 
-         href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf&embedded=true" 
-         target="_blank">
-         📄 View Student List PDF
-      </a>
-    </section>
-
-    <section id="contact">
-      <h3>📞 Contact Us</h3>
-      <p><strong>🏫 School Address:</strong> Saraswati Senior Secondary Vidya Mandir, Deoria Khas, Deoria (U.P.)</p>
-      <p><strong>👨‍🏫 Class Teacher Phone:</strong> <a href="tel:+919451478144">+91 94514 78144</a></p>
-      <p><strong>💬 Developer WhatsApp:</strong> <a href="https://wa.me/919198426858">Chat on WhatsApp</a></p>
-      <p><strong>📧 Developer Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>
-    </section>
-  </main>
-
-  <footer>
-    <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love</p>
-  </footer>
-</body>
-  </html>
+  </nav
