--- a/index.html
+++ b/index.html
@@ -30,4 +30,26 @@
       <li><a href="#"><i class="fas fa-pencil-alt"></i> Post</a></li>
       <li><a href="#"><i class="fas fa-address-book"></i> Contact Us</a></li>
     </ul>
-  </nav
+  </nav>
+ 
+ main>
+    <section id="contact">
+      <h3>📞 Contact Us</h3>
+      <p><strong>🏫 School Address:</strong> Saraswati Senior Secondary Vidya Mandir, Deoria Khas, Deoria (U.P.)</p>
+      <p><strong>👨‍🏫 Class Teacher Phone:</strong> <a href="tel:+919451478144">+91 94514 78144</a></p>
+      <p><strong>💬 Developer WhatsApp:</strong> <a href="https://wa.me/919198426858">Chat on WhatsApp</a></p>
+      <p><strong>📧 Developer Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>
+    </section>
+
+    <section id="Students List">
+      <h4>Class 10th f Students List</h4>
+      <p>LINK: <strong><a href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf">student list pdf</a></strong></p>
+    </section>
+  </main>
+
+  <footer>
+    <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love</p>
+  </footer>
+</body>
+</html>
+
