--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     </ul>
   </nav>
  
- main>
+ <main>
     <section id="contact">
       <h3>📞 Contact Us</h3>
       <p><strong>🏫 School Address:</strong> Saraswati Senior Secondary Vidya Mandir, Deoria Khas, Deoria (U.P.)</p>
