--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
- <!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
@@ -7,6 +7,29 @@
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="styles.css" />
   <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+
+  <style>
+    /* ✅ Only Glowing Button CSS */
+    .glow-button {
+      display: inline-block;
+      padding: 12px 24px;
+      font-size: 16px;
+      font-weight: 600;
+      color: white;
+      background-color: #007bff;
+      border: none;
+      border-radius: 8px;
+      text-decoration: none;
+      box-shadow: 0 0 10px #007bff, 0 0 20px #007bff;
+      transition: 0.3s ease-in-out;
+      margin-top: 10px;
+    }
+
+    .glow-button:hover {
+      box-shadow: 0 0 20px #00cfff, 0 0 40px #00cfff;
+      transform: scale(1.05);
+    }
+  </style>
 </head>
 <body>
   <header>
@@ -24,15 +47,20 @@
   <nav>
     <ul>
       <li><a href="#"><i class="fas fa-home"></i> Home</a></li>
-      <li><a href="#"><i class="fas fa-file-alt"></i> Students List</a></li>
+      <li>
+        <a href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf" 
+           target="_blank" rel="noopener noreferrer">
+          <i class="fas fa-file-alt"></i> Students List
+        </a>
+      </li>
       <li><a href="#"><i class="fas fa-book"></i> Homework</a></li>
       <li><a href="#"><i class="fas fa-bullhorn"></i> Notices</a></li>
       <li><a href="#"><i class="fas fa-pencil-alt"></i> Post</a></li>
       <li><a href="#"><i class="fas fa-address-book"></i> Contact Us</a></li>
     </ul>
   </nav>
- 
- <main>
+
+  <main>
     <section id="contact">
       <h3>📞 Contact Us</h3>
       <p><strong>🏫 School Address:</strong> Saraswati Senior Secondary Vidya Mandir, Deoria Khas, Deoria (U.P.)</p>
@@ -41,9 +69,14 @@
       <p><strong>📧 Developer Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>
     </section>
 
-    <section id="Students List">
-      <h4>Class 10th f Students List</h4>
-      <p>LINK: <strong><a href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf">student list pdf</a></strong></p>
+    <!-- 🔥 Glowing Button Section -->
+    <section id="StudentsList">
+      <h3>📄 Students List</h3>
+      <a class="glow-button" 
+         href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf" 
+         target="_blank" rel="noopener noreferrer">
+         📥 View Student List PDF
+      </a>
     </section>
   </main>
 
@@ -51,5 +84,4 @@
     <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love</p>
   </footer>
 </body>
-</html>
-
+                       </html>
