--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
       <li><a href="#"><i class="fas fa-book"></i> Homework</a></li>
       <li><a href="#"><i class="fas fa-bullhorn"></i> Notices</a></li>
       <li><a href="#"><i class="fas fa-pencil-alt"></i> Post</a></li>
-      <li><a href="#"><i class="fas fa-address-book"></i> Contact Us</a></li>
+      <li><a href="#contact"><i class="fas fa-address-book"></i> Contact Us</a></li>
     </ul>
   </nav>
 
@@ -84,4 +84,4 @@
     <p>© 2025 SSSVM CLASS 10th F | 🙏 Made with Faith & Love</p>
   </footer>
 </body>
-                       </html>
+</html>
