--- a/index.html
+++ b/index.html
@@ -55,7 +55,11 @@
       </li>
       <li><a href="#"><i class="fas fa-book"></i> Homework</a></li>
       <li><a href="#"><i class="fas fa-bullhorn"></i> Notices</a></li>
-      <li><a href="#"><i class="fas fa-pencil-alt"></i> Post</a></li>
+      <li>
+  <a href="post.html">
+    <i class="fas fa-pencil-alt"></i> Post
+  </a>
+      </li>
       <li><a href="#contact"><i class="fas fa-address-book"></i> Contact Us</a></li>
     </ul>
   </nav>
