--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </a>
       </li>
       <li><a href="#"><i class="fas fa-book"></i> Homework</a></li>
-      <li><a href="#"><i class="fas fa-bullhorn"></i> Notices</a></li>
+      <li><a href="Notices.html"><i class="fas fa-bullhorn"></i> Notices</a></li>
       <li>
   <a href="post.html">
     <i class="fas fa-pencil-alt"></i> Post
