--- a/Notices.html
+++ b/Notices.html
@@ -90,8 +90,8 @@
       <h2>📢 Latest Class 10-F Notices</h2>
       <ul>
         <li>🗓️ Classes are running continuously from 20 JUNE 2025 after the summer vacations.</li>  
-    <li>📚 Bringh IT classwork copy.</li>  
-    <li>🏫 1st Periodic Test Answer Sheet will be displayed on 8th July - 9th July</li>  
+    <li>📚 Bring IT classwork copy.</li>  
+    <li>🏫 1st Periodic Test Answer Sheet will be shown on 8th July - 9th July</li>  
     <li>📚 Complete History's work daily.</li>
         <li>🔔School timing 7:30 a.m. - 12:40 p.m.</li>
       </ul>
