--- a/homework.html
+++ b/homework.html
@@ -1,1 +1,120 @@
-<!-- List homework files from Firebase -->
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Class 10-F | Homework</title>
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/a076d05399.js" crossorigin="anonymous"></script>
+  <style>
+    body {
+      font-family: 'Poppins', sans-serif;
+      background-color: #f6fff9;
+      margin: 0;
+      padding: 0;
+      color: #333;
+    }
+
+    header {
+      background: linear-gradient(90deg, #00c9a7, #92fe9d);
+      color: white;
+      padding: 50px 20px;
+      text-align: center;
+      box-shadow: 0 4px 16px rgba(0, 0, 0, 0.25);
+    }
+
+    header h1 {
+      margin: 0;
+      font-size: 38px;
+      letter-spacing: 1px;
+      text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+    }
+
+    .content {
+      max-width: 960px;
+      margin: 50px auto;
+      padding: 20px;
+    }
+
+    .homework-box {
+      background-color: #e9fff6;
+      border-radius: 20px;
+      padding: 35px;
+      box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+      line-height: 1.9;
+      transition: transform 0.3s ease;
+    }
+
+    .homework-box:hover {
+      transform: scale(1.01);
+    }
+
+    .homework-box h2 {
+      color: #0ca678;
+      margin-top: 0;
+      font-size: 26px;
+      margin-bottom: 25px;
+      border-bottom: 2px dashed #a1e3d8;
+      padding-bottom: 10px;
+    }
+
+    .homework-box ul {
+      padding-left: 25px;
+    }
+
+    .homework-box li {
+      margin-bottom: 14px;
+      font-size: 17px;
+      position: relative;
+      padding-left: 10px;
+    }
+
+    .homework-box li::before {
+      content: "📘";
+      position: absolute;
+      left: -25px;
+      font-size: 18px;
+    }
+
+    .back-button {
+      display: inline-block;
+      margin-top: 35px;
+      padding: 12px 26px;
+      font-size: 16px;
+      font-weight: 600;
+      color: #333;
+      background-color: #ffe3ec;
+      border: none;
+      border-radius: 10px;
+      text-decoration: none;
+      box-shadow: 0 0 10px #ffc5da, 0 0 20px #ffc5da;
+      transition: 0.3s ease-in-out;
+    }
+
+    .back-button:hover {
+      background-color: #ffd6e8;
+      box-shadow: 0 0 20px #ff9ec4, 0 0 40px #ff9ec4;
+      transform: scale(1.05);
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <h1><i class="fas fa-book"></i> CLASS 10-F HOMEWORK</h1>
+  </header>
+
+  <div class="content">
+    <div class="homework-box">
+      <h2>📝 Today's Homework</h2>
+      <ul>
+        <li>English: Read the Story".</li>
+        <li>Hindi: Learn the meaning of poem.</li>
+        <li>Science: Read about the usages of different types of salts.</li>
+        <li>Maths: Complete ex 4.3 in fair copy and practice other questions.</li>
+        <li>Social Science: Make extra questions and read.</li>
+      </ul>
+      <a class="back-button" href="index.html">⬅️ Back to Home</a>
+    </div>
+  </div>
+</body>
+</html>
