--- a/homework.html
+++ b/homework.html
@@ -112,6 +112,7 @@
         <li>Science: Read about the usages of different types of salts.</li>
         <li>Maths: Complete ex 4.3 in fair copy and practice other questions.</li>
         <li>Social Science: Make extra questions and read.</li>
+        <li>IT 402: Do Homework.</li>
       </ul>
       <a class="back-button" href="index.html">⬅️ Back to Home</a>
     </div>
