--- a/homework.html
+++ b/homework.html
@@ -107,7 +107,7 @@
     <div class="homework-box">
       <h2>📝 Today's Homework</h2>
       <ul>
-        <li>English: Read the Story".</li>
+        <li>English: Read the Story.</li>
         <li>Hindi: Learn the meaning of poem.</li>
         <li>Science: Read about the usages of different types of salts.</li>
         <li>Maths: Complete ex 4.3 in fair copy and practice other questions.</li>
