--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
           <i class="fas fa-file-alt"></i> Students List
         </a>
       </li>
-      <a href="homework.html"><i class="fas fa-book"></i> Homework</a>
+      <li> <a href="homework.html"><i class="fas fa-book"></i> Homework</a></li>
 
       <li><a href="Notices.html"><i class="fas fa-bullhorn"></i> Notices</a></li>
       <li>
