--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
   </header>    <nav>  
     <ul>  
       <li><a href="#"><i class="fas fa-home"></i> Home</a></li>  
-      <li style="color:yellow;">  
-        <a href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf"   
-           target="_blank" rel="noopener noreferrer">  
-          <i class="fas fa-file-alt"></i> Students List  
-        </a>  
-      </li>  
+      <li>  
+  <a href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf"   
+     target="_blank" rel="noopener noreferrer" style="color: yellow;">  
+    <i class="fas fa-file-alt"></i> Students List  
+  </a>  
+</li>
       <li><a href="homework.html"><i class="fas fa-book"></i> Homework</a></li>  <li><a href="Notices.html"><i class="fas fa-bullhorn"></i> Notices</a></li>  
   <li>
 
