--- a/index.html
+++ b/index.html
@@ -47,7 +47,12 @@
     <i class="fas fa-file-alt"></i> Students List  
   </a>  
 </li>
-      <li><a href="homework.html" style="color: lightgreen;"><i class="fas fa-book"></i> Homework</a></li>  <li><a href="Notices.html"><i class="fas fa-bullhorn"></i> Notices</a></li>  
+      <li><a href="homework.html" style="color: lightgreen;"><i class="fas fa-book"></i> Homework</a></li>  <li>
+  <a href="Notices.html" class="gradient-text">
+    <i class="fas fa-bullhorn"></i> Notices
+  </a>
+</li>
+  
   <li>
 
   <a href="post.html">  
