--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
   </a>  
 </li>
       <li><a href="homework.html" style="color: lightgreen;"><i class="fas fa-book"></i> Homework</a></li>  <li>
-  <a href="Notices.html" class="gradient-text">
+  <a href="Notices.html" class="red-pink-text">
     <i class="fas fa-bullhorn"></i> Notices
   </a>
 </li>
