--- a/index.html
+++ b/index.html
@@ -47,19 +47,21 @@
     <i class="fas fa-file-alt"></i> Students List  
   </a>  
 </li>
-      <li>
-  <a href="Notices.html" class="light-pink">
+      <li><a href="homework.html" style="color: lightgreen;"><i class="fas fa-book"></i> Homework</a></li>
+     <li>
+  <a href="Notices.html" class="notice-pink">
     <i class="fas fa-bullhorn"></i> Notices
   </a>
 </li>
 
-  
-  <li>
 
-  <a href="post.html">  
-    <i class="fas fa-pencil-alt"></i> Post  
-  </a>  
-      </li>  
+  
+ <li>
+  <a href="post.html" class="lightblue">
+    <i class="fas fa-pencil-alt"></i> Post
+  </a>
+</li>
+ 
       <li><a href="#contact"><i class="fas fa-address-book"></i> Contact Us</a></li>  
     </ul>  
   </nav>    <main>  
