--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </li>
       <li><a href="homework.html" style="color: lightgreen;"><i class="fas fa-book"></i> Homework</a></li>
      <li>
-  <a href="Notices.html" class="notice-pink">
+  <a href="Notices.html" style="color: lightpink;">
     <i class="fas fa-bullhorn"></i> Notices
   </a>
 </li>
