--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </li>
       <li><a href="homework.html" style="color: lightgreen;"><i class="fas fa-book"></i> Homework</a></li>
      <li>
-  <a href="Notices.html" style="color: lightpink;">
+  <a href="Notices.html" style="color: pink;">
     <i class="fas fa-bullhorn"></i> Notices
   </a>
 </li>
@@ -57,7 +57,7 @@
 
   
  <li>
-  <a href="post.html" class="lightblue">
+  <a href="post.html" style="color: lightblue;">
     <i class="fas fa-pencil-alt"></i> Post
   </a>
 </li>
