--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
   </a>
 </li>
  
-      <li><a href="#contact"><i class="fas fa-address-book"></i> Contact Us</a></li>  
+      <li><a href="#contact" style="color: black;"><i class="fas fa-address-book"></i> Contact Us</a></li>  
     </ul>  
   </nav>    <main>  
     <section id="contact">  
