--- a/index.html
+++ b/index.html
@@ -44,13 +44,13 @@
       <li>  
   <a href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf"   
      target="_blank" rel="noopener noreferrer" style="color: lightyellow;">  
-    <i class="fas fa-file-alt"></i> •<u>STUDENTS LIST</u>  
+    <i class="fas fa-file-alt"></i> 👨‍🎓<u>STUDENTS LIST</u>  
   </a>  
 </li>
-      <li><a href="homework.html" style="color: lightgreen;"><i class="fas fa-book"></i> •<u>HOMEWORK</u></a></li>
+      <li><a href="homework.html" style="color: lightgreen;"><i class="fas fa-book"></i> 📚<u>HOMEWORK</u></a></li>
      <li>
   <a href="Notices.html" style="color: pink;">
-    <i class="fas fa-bullhorn"></i> •<u>NOTICE</u>
+    <i class="fas fa-bullhorn"></i> 📢<u>NOTICE</u>
   </a>
 </li>
 
@@ -58,11 +58,11 @@
   
  <li>
   <a href="post.html" style="color: lightblue;">
-    <i class="fas fa-pencil-alt"></i> •<u>POSTS</u>
+    <i class="fas fa-pencil-alt"></i> ✍️<u>POSTS</u>
   </a>
 </li>
  
-      <li><a href="#contact" style="color: black;"><i class="fas fa-address-book"></i> •<u>CONTACT US</u></a></li>  
+      <li><a href="#contact" style="color: black;"><i class="fas fa-address-book"></i> ☎️<u>CONTACT US</u></a></li>  
     </ul>  
   </nav>    <main>  
     <section id="contact">  
