--- a/index.html
+++ b/index.html
@@ -66,18 +66,26 @@
     </ul>  
   </nav>    <main>  
     <section id="contact">  
-      <h3>📞 Contact Us</h3>  
+      <h4>📞 CONTACT US</h4>  
       <p><strong>🏫 School Address:</strong> Saraswati Senior Secondary Vidya Mandir, Deoria Khas, Deoria (U.P.)</p>  
       <p><strong>👨‍🏫 Class Teacher Phone:</strong> <a href="tel:+919451478144">+91 94514 78144</a></p>  
       <p><strong>💬 Developer WhatsApp:</strong> <a href="https://wa.me/919198426858">Chat on WhatsApp</a></p>  
       <p><strong>📧 Developer Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>  
     </section>  <!-- 🔥 Glowing Button Section -->  
 <section id="StudentsList">  
-  <h3>📄 Students List</h3>  
+  <h4>📄 STUDENT LIST</h4>  
   <a class="glow-button"   
      href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf"   
      target="_blank" rel="noopener noreferrer">  
      📥 View Student List PDF  
+  </a>  
+</section>
+
+    <section id="FeePayment">  
+  <h4>📄 ONLINE FEE PAYMENT</h4>  
+  <a class="glow-button"   
+     href="https://deoriasvm.com/Student-Login">  
+     📥 ONLINE FEE PAYMENT  
   </a>  
 </section>
 
