--- a/index.html
+++ b/index.html
@@ -66,23 +66,26 @@
     </ul>  
   </nav>    <main>  
     <section id="contact">  
-      <h4>📞 CONTACT US</h4>  
+      <h2>📞 CONTACT US</h2>  
       <p><strong>🏫 School Address:</strong> Saraswati Senior Secondary Vidya Mandir, Deoria Khas, Deoria (U.P.)</p>  
       <p><strong>👨‍🏫 Class Teacher Phone:</strong> <a href="tel:+919451478144">+91 94514 78144</a></p>  
       <p><strong>💬 Developer WhatsApp:</strong> <a href="https://wa.me/919198426858">Chat on WhatsApp</a></p>  
       <p><strong>📧 Developer Email:</strong> <a href="mailto:priyanshusingh0606@gmail.com">priyanshusingh0606@gmail.com</a></p>  
-    </section>  <!-- 🔥 Glowing Button Section -->  
+    </section>  
+    <br><br>
+    <!-- 🔥 Glowing Button Section -->  
 <section id="StudentsList">  
-  <h4>📄 STUDENT LIST</h4>  
+  <h2>📄 STUDENT LIST</h2>  
   <a class="glow-button"   
      href="https://docs.google.com/gview?url=https://sssvmclass10thf.github.io/ssvmclass10thf/Fancy_Student_List.pdf"   
      target="_blank" rel="noopener noreferrer">  
      📥 View Student List PDF  
   </a>  
 </section>
+    <br><br>
 
     <section id="FeePayment">  
-  <h4>📄 ONLINE FEE PAYMENT</h4>  
+  <h2>💸 ONLINE FEE PAYMENT</h2>  
   <a class="glow-button"   
      href="https://deoriasvm.com/Student-Login">  
      📥 ONLINE FEE PAYMENT  
